Fixed responsiveness issue again
There was white space when vertical and horizontal scrolling. There should not have been any scrolling in general. Solved with overflow:hidden and position:relative.

--- a/react-weather-app/src/index.css
+++ b/react-weather-app/src/index.css
@@ -4,14 +4,16 @@
   box-sizing:border-box;
   margin:0;
   padding:0;
-  
+  position: relative;
+  overflow-x: hidden;
+  overflow-y:hidden;
 }
 iframe
 {
     display: none;
 }
 body {
-  overflow-y:hidden;
+
   font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
